codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tts__tests__tts_command_failure.snap
---
source: tui/src/chatwidget/tts_tests.rs
expression: "lines.join(\"\\n\")"
---
■ Text to speech disabled: "sh" exited with exit status: 7. Check tui.tts.command, then use /speak to retry.
