codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tts__tests__tts_final_indicator.snap
---
source: tui/src/chatwidget/tts_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
TTS: final · /speak

› Ask Codex to do anything

  5.6-Sol default · tmp/project
