codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tts__tests__tts_mode_picker.snap
---
source: tui/src/chatwidget/tts_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Text to speech
  Choose what Codex reads aloud. Esc or Ctrl+C stops playback.


› 1. Off (current)       Keep messages silent.
  2. Final               Speak final answers and interactive questions.
  3. Progress and final  Also speak progress updates.

  enter select · esc back
